test/errors/021_bad_num_parse.eu
# -*- mode: conf -*-

bad: __NUMPARSE("blah")
